fix height on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,22 @@
 html {
-  height: 100%;
+  max-height: -webkit-fill-available;
 }
 
 body {
   margin:0;
   padding: 0;
-  height: 100%;
+  height: 100vh;
+  max-height: -webkit-fill-available;
   background-color: #777777;
 }
 
 #app {
+  height: 100%;
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   color: #333333;
-  height: 100%;
-
-  @media(min-width: 768px) {
-    & {
-      margin-top: 0.5vh;
-      height: 98%;
-    }
-  }
 }
 
 /*
